// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InputColor > renders correctly with class 1`] = `
<div>
  <div
    class="relative inline-flex items-center w-64"
    data-slot="root"
  >
    <span
      class="absolute inset-y-0 start-0 flex items-center ps-3"
      data-slot="leading"
    >
      
      
      
      <button
        aria-controls=""
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-2 rounded-md"
        data-slot="base"
        data-state="closed"
        id="reka-popover-trigger-v-1"
        style="background-color: rgb(255, 0, 0);"
        type="button"
      >
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
      </button>
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </span>
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-11"
      data-slot="base"
      id="v-0"
      maxlength="7"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputColor > renders correctly with disabled 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
    data-slot="root"
  >
    <span
      class="absolute inset-y-0 start-0 flex items-center ps-3"
      data-slot="leading"
    >
      
      
      
      <button
        aria-controls=""
        aria-disabled="true"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-2 rounded-md"
        data-slot="base"
        data-state="closed"
        disabled=""
        id="reka-popover-trigger-v-1"
        style="background-color: rgb(255, 0, 0);"
        type="button"
      >
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
      </button>
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </span>
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-11"
      data-slot="base"
      disabled=""
      id="v-0"
      maxlength="7"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputColor > renders correctly with size lg 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
    data-slot="root"
  >
    <span
      class="absolute inset-y-0 start-0 flex items-center ps-3"
      data-slot="leading"
    >
      
      
      
      <button
        aria-controls=""
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-2 rounded-md"
        data-slot="base"
        data-state="closed"
        id="reka-popover-trigger-v-1"
        style="background-color: rgb(255, 0, 0);"
        type="button"
      >
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
      </button>
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </span>
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-11"
      data-slot="base"
      id="v-0"
      maxlength="7"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputColor > renders correctly with size md 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
    data-slot="root"
  >
    <span
      class="absolute inset-y-0 start-0 flex items-center ps-2.5"
      data-slot="leading"
    >
      
      
      
      <button
        aria-controls=""
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1.5 text-sm bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-1.5 rounded-sm"
        data-slot="base"
        data-state="closed"
        id="reka-popover-trigger-v-1"
        style="background-color: rgb(255, 0, 0);"
        type="button"
      >
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
      </button>
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </span>
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset gap-1.5 px-2.5 py-1.5 text-sm focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-9"
      data-slot="base"
      id="v-0"
      maxlength="7"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputColor > renders correctly with size sm 1`] = `
<div>
  <div
    class="relative inline-flex items-center"
    data-slot="root"
  >
    <span
      class="absolute inset-y-0 start-0 flex items-center ps-2"
      data-slot="leading"
    >
      
      
      
      <button
        aria-controls=""
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-1 text-xs bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-1 rounded-xs"
        data-slot="base"
        data-state="closed"
        id="reka-popover-trigger-v-1"
        style="background-color: rgb(255, 0, 0);"
        type="button"
      >
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
      </button>
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </span>
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset gap-1 px-2 py-1 text-xs focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-7"
      data-slot="base"
      id="v-0"
      maxlength="7"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputColor > renders correctly with ui 1`] = `
<div>
  <div
    class="relative inline-flex items-center rounded-none"
    data-slot="root"
  >
    <span
      class="absolute inset-y-0 start-0 flex items-center ps-3"
      data-slot="leading"
    >
      
      
      
      <button
        aria-controls=""
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="inline-flex items-center justify-center transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-2 rounded-md"
        data-slot="base"
        data-state="closed"
        id="reka-popover-trigger-v-1"
        style="background-color: rgb(255, 0, 0);"
        type="button"
      >
        
        <!--v-if-->
        
        
        <!--v-if-->
        
        
        <!--v-if-->
        
      </button>
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </span>
    <input
      class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-11"
      data-slot="base"
      id="v-0"
      maxlength="7"
      type="text"
    />
    <!--v-if-->
  </div>
</div>
`;

exports[`InputColor > renders correctly within FormField 1`] = `
<div>
  <div
    class="text-base"
    data-slot="root"
  >
    <div
      class=""
      data-slot="wrapper"
    >
      <div
        class="flex items-center justify-between gap-1"
        data-slot="labelWrapper"
      >
        <label
          class="block font-medium text-default"
          data-slot="label"
          for="v-0"
          id="v-0-label"
        >
          
          Label
          
        </label>
        <span
          class="text-muted"
          data-slot="hint"
          id="v-0-hint"
        >
          Hint
        </span>
      </div>
      <p
        class="text-muted"
        data-slot="description"
        id="v-0-description"
      >
        Description
      </p>
    </div>
    <div
      class="mt-1"
      data-slot="container"
    >
      
      <div
        class="relative inline-flex items-center"
        data-slot="root"
      >
        <span
          class="absolute inset-y-0 start-0 flex items-center ps-3"
          data-slot="leading"
        >
          
          
          
          <button
            aria-controls=""
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="inline-flex items-center justify-center transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 gap-2 text-base bg-primary text-inverted hover:bg-primary/75 focus-visible:outline-primary active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary p-2 rounded-md"
            data-slot="base"
            data-state="closed"
            id="reka-popover-trigger-v-1"
            style="background-color: rgb(255, 0, 0);"
            type="button"
          >
            
            <!--v-if-->
            
            
            <!--v-if-->
            
            
            <!--v-if-->
            
          </button>
          <!--teleport start-->
          <!--teleport end-->
          
          
          
        </span>
        <input
          aria-describedby="v-0-hint v-0-description v-0-help"
          class="w-full appearance-none rounded-md border-0 transition-colors focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 bg-elevated ring ring-accented ring-inset gap-2 px-3 py-2 text-base focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-inset ps-11"
          data-slot="base"
          id="v-0"
          maxlength="7"
          type="text"
        />
        <!--v-if-->
      </div>
      
      <p
        class="mt-1 text-muted"
        data-slot="help"
        id="v-0-help"
      >
        Help
      </p>
    </div>
  </div>
</div>
`;
